# DOMUS-Studio

./: .gitignore  AI-BEZPECNOST.html  AI-STUDIO-A-MANUAL-v7.3.md  CONTRIBUTING.md  FINALNI-OPRAVA-THREEJS-CI.md  FINALNI-OVERENI-v7.3.txt  FINALNI-OVERENI-v7.txt  KONTROLA-A-POPTAVKA.html  LIDAR-A-VR.html  MANUAL-DOMUS-STUDIO-v7.3.md  MOBILNI-SYNCHRONIZACE.html  MODULARIZACE-A-TEST-LAB-v6.1.md  NAVOD-PRVNI-SPUSTENI.html  NOVINKY-VERZE-2.html  NOVINKY-VERZE-3.html  NOVINKY-VERZE-4.html  NOVINKY-VERZE-5.html  NOVINKY-VERZE-6.1.html  NOVINKY-VERZE-6.html  NOVINKY-VERZE-7.1.html  NOVINKY-VERZE-7.2.html  NOVINKY-VERZE-7.3.html  NOVINKY-VERZE-7.html  Nastavit-AI-pripojeni.bat  Nastavit-AI-pripojeni.ps1  OPRAVA-CSP-BROWSER-CI.md  OPRAVA-GITHUB-ACTIONS-NPM-CI.md  OPRAVA-TEST-LAB-CONCURRENCY.md  OPRAVY-A-TESTY-v6.md  OPRAVY-PO-AUDITU-v7.md  Odstranit-AI-klic.bat  Povolit-mobilni-pristup.bat  Povolit-mobilni-pristup.ps1  README-OPRAVA.txt  README.md  STAVEBNI-DENIK-A-PASPORT.html  Spustit-DOMUS-Studio.bat  TECHNICKA-ETAPA-v7.2.md  TESTOVANI.txt  VERSION.txt  (+18 more)
.github/: dependabot.yml  pull_request_template.md
docs/: ARCHITEKTURA-v7.md  DESKTOP-RELEASE.md  ETAPY-A-C-PREMIUM.md  NEZAVISLY-AUDIT-A-OPRAVY-v7.1.md  TEST-LAB.md
scripts/: architecture-audit.mjs  build.mjs  check-generated.mjs  check-lockfile-registry.mjs  run-browser-tests.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: browser-smoke.mjs  build-output-tests.mjs  core-tests.mjs  db-browser.mjs  http-app-smoke.mjs  (+5 more)
(+49 files in other folders)
