[package]
name = "domus-studio"
version = "7.3.0"
description = "DOMUS Studio Premium"
authors = ["DOMUS Studio"]
edition = "2021"

[lib]
name = "domus_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
